# timebench-eval

./: README.md  app.py  pyproject.toml  timebench_eval.py
.github/workflows/: main.yml
tests/: conftest.py  test_answer_extraction.py  test_metrics.py
timebench_eval/: timebench_eval.py
